Added cart page

--- a/DNK_main.html
+++ b/DNK_main.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="#"><strong>$0.00</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="yourcart.html"><i class="fa fa-shopping-bag"></i></a>
+                            <a class="nav-link" href="addToCart.html"><i class="fa fa-shopping-bag"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="fa fa-user"></i></a>
