--- a/product_page.html
+++ b/product_page.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="#"><strong>$0.00</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="yourcart.html"><i class="fa fa-shopping-bag"></i></a>
+                            <a class="nav-link" href="addToCart.html"><i class="fa fa-shopping-bag"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="fa fa-user"></i></a>
@@ -82,18 +82,18 @@
             </div>
             
             <div class="col-lg-6 col-md-12">
-                <div class="productName"><b>DNK Blue Shoes<p>
-                    $200.00 - $240.00</div> + Free Shipping</b></p>
+                <div class="productName"><b>DNK Blue Shoes<p></div>
+                   <span class="amountShoe">$240.00</span> + Free Shipping</b></p>
                 <p>
                     Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit sed.
                 </p>
                 <div class="lineSpace">
-                    <input type="number" id="numberInput" placeholder="0" name="quantity" min="1">
+                    <input type="number" id="numberInput" id="ProductCount" placeholder="0" name="quantity" min="1">
                      <a class="toCartPage" href="#">
                         <span class="addToCart"><b>ADD TO CART</b></span>
                     </a>
                 </div>
-                <div class="error"></div>
+                <div class="error text-center"></div>
             </div>
         </div>
     </div>
@@ -101,7 +101,6 @@
     
   
     <!--home page completed-->
-
 
 <!-- Related Products -->
 
@@ -270,11 +269,10 @@ There are no reviews yet.
 </div>
 <hr />
 
-
-
     <!-- Scripts should be at the end of the body for faster page loading -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/DNK_kart.js"></script>
 </body>
 </html>
