improved version included 6pages

--- a/DNK_main.html
+++ b/DNK_main.html
@@ -24,16 +24,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>EVERYTHING</strong></a>
+                            <a class="nav-link" href="Tagline_page.html"><strong>EVERYTHING</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>WOMEN</strong></a>
+                            <a class="nav-link" href="Tagline_page.html#women"><strong>WOMEN</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>MEN</strong></a>
+                            <a class="nav-link" href="Tagline_page.html#men"><strong>MEN</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>ACCESSORIES</strong></a>
+                            <a class="nav-link" href="Tagline_page.html#ACCESSORIES"><strong>ACCESSORIES</strong></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="#"><strong>$0.00</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="addToCart.html"><i class="fa fa-shopping-bag"></i></a>
+                            <a class="nav-link" href="shop_pay_cart.html"><i class="fa fa-shopping-bag"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="fa fa-user"></i></a>
@@ -66,7 +66,7 @@
                     <div class="mainHead"><b>Raining Offers For <div>Hot Summer!</div></div>
                     <div class="mainAd">25% Off On All Products</div></b>
                     <div class="blockIn">
-                        <a href="shoppingDetails.html" class="btnShopNow"><b>SHOP NOW</b></a>
+                        <a href="Tagline_page.html" class="btnShopNow"><b>SHOP NOW</b></a>
                         <a href="#" class="btnFindMore"><b>FIND MORE</b></a>
                     </div>
                 </div>
@@ -75,40 +75,93 @@
     </div>
     <!--home page completed-->
 
-    <div class="container">
-      <div class="row mt-4">
-          <div class="col-sm-4">
-              <div class="position-relative">
-                  <div class="overlay">
-                      <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
-                      <div> "You're unique. Your clothing can be too..."</div>
-                      <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+
+
+
+    <div class="container  mt-4">
+      <div id="multiCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <div class="row">
+                      <div class="col">
+                        <div class="position-relative">
+                          <div class="overlay">
+                              <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
+                              <div> "You're unique. Your clothing can be too..."</div>
+                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                          </div>
+                          <img src="images/women-fashion-free-img.jpg" class="img-fluid d-block w-100" alt="Image 1">
+                      </div>
+                      </div>
+                      <div class="col">
+                        <div class="position-relative">
+                          <div class="overlay">
+                              <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
+                              <div> "You're unique. Your clothing can be too..."</div>
+                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                          </div>
+                          <img src="images/men-fashion-free-img.jpg" class="img-fluid d-block w-100" alt="Image 2">
+                      </div>
+                      </div>
+                      <div class="col">
+                        <div class="position-relative">
+                          <div class="overlay">
+                              <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
+                              <div> "You're unique. Your clothing can be too..."</div>
+                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                          </div>
+                          <img src="images/footwear-free-img.jpg" class="img-fluid d-block w-100" alt="Image 3">
+                      </div>
+                      </div>
                   </div>
-                  <img src="images/women-fashion-free-img.jpg" class="img-fluid" alt="Image 1">
+              </div>
+              <div class="carousel-item">
+                  <div class="row">
+                      <div class="col">
+                        <div class="position-relative">
+                          <div class="overlay">
+                              <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
+                              <div> "You're unique. Your clothing can be too..."</div>
+                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                          </div>
+                          <img src="images/footwear-free-img.jpg" class="img-fluid d-block w-100" alt="Image 3">
+                      </div>
+                      </div>
+                      <div class="col">
+                        <div class="position-relative">
+                          <div class="overlay">
+                              <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
+                              <div> "You're unique. Your clothing can be too..."</div>
+                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                          </div>
+                          <img src="images/men-fashion-free-img.jpg" class="img-fluid d-block w-100" alt="Image 2">
+                      </div>
+                      </div>
+                      <div class="col">
+                        <div class="position-relative">
+                          <div class="overlay">
+                              <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
+                              <div> "You're unique. Your clothing can be too..."</div>
+                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                          </div>
+                          <img src="images/women-fashion-free-img.jpg" class="img-fluid d-block w-100" alt="Image 1">
+                      </div>
+                      </div>
+                  </div>
               </div>
           </div>
-          <div class="col-sm-4">
-              <div class="position-relative">
-                  <div class="overlay">
-                      <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
-                      <div> "You're unique. Your clothing can be too..."</div>
-                      <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
-                  </div>
-                  <img src="images/men-fashion-free-img.jpg" class="img-fluid" alt="Image 2">
-              </div>
-          </div>
-          <div class="col-sm-4">
-              <div class="position-relative">
-                  <div class="overlay">
-                      <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
-                      <div> "You're unique. Your clothing can be too..."</div>
-                      <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
-                  </div>
-                  <img src="images/footwear-free-img.jpg" class="img-fluid" alt="Image 3">
-              </div>
-          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#multiCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#multiCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
       </div>
-  </div>
+    </div>
+
+
 
 <!-- Featured Products -->
 <div class="container">
