--- a/product_page.html
+++ b/product_page.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="#"><strong>$0.00</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="addToCart.html"><i class="fa fa-shopping-bag"></i></a>
+                            <a class="nav-link" href="shop_pay_cart.html"><i class="fa fa-shopping-bag"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="fa fa-user"></i></a>
@@ -82,13 +82,13 @@
             </div>
             
             <div class="col-lg-6 col-md-12">
-                <div class="productName"><b>DNK Blue Shoes<p></div>
-                   <span class="amountShoe">$240.00</span> + Free Shipping</b></p>
+                <div class="productName"><b>DNK Blue Shoes<p></div>$
+                   <span class="amountShoe">240.00</span> + Free Shipping</b></p>
                 <p>
                     Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit sed.
                 </p>
                 <div class="lineSpace">
-                    <input type="number" id="numberInput" id="ProductCount" placeholder="0" name="quantity" min="1">
+                    <input type="number" id="ProductCount" placeholder="0" name="quantity" min="1">
                      <a class="toCartPage" href="#">
                         <span class="addToCart"><b>ADD TO CART</b></span>
                     </a>
