--- a/Tagline_page.html
+++ b/Tagline_page.html
@@ -23,33 +23,33 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>EVERYTHING</strong></a>
+                            <a class="nav-link" href="Tagline_page.html"><strong>EVERYTHING</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>WOMEN</strong></a>
+                            <a class="nav-link" href="Tagline_page.html#women"><strong>WOMEN</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>MEN</strong></a>
+                            <a class="nav-link" href="Tagline_page.html#men"><strong>MEN</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>ACCESSORIES</strong></a>
+                            <a class="nav-link" href="Tagline_page.html#Accessories"><strong>ACCESSORIES</strong></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="DNK_main.html#about">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
+                            <a class="nav-link" href="DNK_main.html#about">CONTACT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>$0.00</strong></a>
+                            <a class="nav-link" href="Payment_details.html"><strong>$0.00</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="yourcart.html"><i class="fa fa-shopping-bag"></i></a>
+                            <a class="nav-link" href="shop_pay_cart.html"><i class="fa fa-shopping-bag"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-user"></i></a>
+                            <a class="nav-link" href="shipping__details.html"><i class="fa fa-user"></i></a>
                         </li>
                     </ul>
                 </div>
