--- a/DNK_main.html
+++ b/DNK_main.html
@@ -33,24 +33,24 @@
                             <a class="nav-link" href="Tagline_page.html#men"><strong>MEN</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Tagline_page.html#ACCESSORIES"><strong>ACCESSORIES</strong></a>
+                            <a class="nav-link" href="Tagline_page.html#Accessories"><strong>ACCESSORIES</strong></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
+                            <a class="nav-link" href="#about">CONTACT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>$0.00</strong></a>
+                            <a class="nav-link" href="Payment_details.html"><strong>$0.00</strong></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="shop_pay_cart.html"><i class="fa fa-shopping-bag"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-user"></i></a>
+                            <a class="nav-link" href="shipping__details.html"><i class="fa fa-user"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -171,7 +171,7 @@
   <div class="row section2 topMargin">
     <div class="col-lg-3 col-md-6">
         <div class="gallery">
-          <a href="#">
+          <a href="shortproduct.html">
             <img src="images/product-w-jeans1-400x400.jpg" alt="Blue Denim shorts" class="imageSize">
           </a>
           <div class="desc">
@@ -191,7 +191,7 @@
 
     <div class="col-lg-3 col-md-6">
         <div class="gallery">
-          <a href="#">
+          <a href="jeansformen.html">
             <img src="images/product-m-jeans1.jpg"  alt="Dark Brown Jeans" class="imageSize">
           </a>
           <div class="desc">
@@ -209,7 +209,7 @@
     </div>
 <div class="col-lg-3 col-md-6">
     <div class="gallery">
-      <a href="#">
+      <a href="bluejean.html">
         <img src="images/product-w-jeans2.jpg"  alt="Blue Denim Jeans" class="imageSize">
       </a>
       <div class="desc">
@@ -303,7 +303,7 @@ Buy This T-shirt At 20% Discount, Use Code OFF20
 
 <div class="container-fluid section">
   <hr/>
-  <div class="row section">
+  <div class="row section" ><a name="about"></a>
     <div class="col-sm-4 col_padding">
       <div class="container">
         <img src="images/logo@2x-free-img-300x100.png" class="logoSize" alt="Company Logo" />
