--- a/shortproduct.html
+++ b/shortproduct.html
@@ -61,34 +61,20 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <div class="img-hover-zoom">
-                    <img src="images/sports-shoe1.jpg" id="mainShoe" class="img-fluid imageSize" alt="DNK Blue Shoe" />
-                </div>
-                <div class="row flex-nowrap overflow-auto section">
-                    <div class="col-lg-3 col-md-6">
-                        <img src="images/relatedP1.jpg" id="shoe1" class="img-fluid shoeSize" alt="DNK Dark Blue Shoe">
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <img src="images/sports-shoe2.jpg" id="shoe2" class="img-fluid shoeSize" alt="DNK Red Shoe">
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <img src="images/relatedP2 (1).jpg" id="shoe3" class="img-fluid shoeSize" alt="DNK Yellow Shoe">
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <img src="images/sports-shoe4.jpg" id="shoe4" class="img-fluid shoeSize" alt="DNK Green Shoe">
-                    </div>
+                    <img src="images/productshort.jpg" id="mainShoe2" class="img-fluid imageSize" alt="DNK Blue Shoe" />
                 </div>
             </div>
             
             <div class="col-lg-6 col-md-12">
-                <div class="productName"><b>DNK Blue Shoes<p></div>$
-                   <span class="amountShoe">240.00</span> + Free Shipping</b></p>
+                <div class="productName2"><b>DNK Denim shorts<p></div>$
+                   <span class="amountShoe2">340.00</span> + Free Shipping</b></p>
                 <p>
                     Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit sed.
                 </p>
                 <div class="lineSpace">
-                    <input type="number" id="ProductCount" placeholder="0" name="quantity" min="1">
+                    <input type="number" id="ProductCount2" placeholder="0" name="quantity" min="1">
                      <a class="toCartPage" href="#">
-                        <span class="addToCart"><b>ADD TO CART</b></span>
+                        <span class="addToCart2"><b>ADD TO CART</b></span>
                     </a>
                 </div>
                 <div class="error text-center"></div>
@@ -205,6 +191,7 @@
       <span class="fa fa-star checked"></span>
   </div>
 </div>
+
 <div class=" container box">
   <div class=" lineSpaceTop reviewBox">
  Be the first to review “DNK Blue Shoes”
@@ -284,6 +271,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="js/DNK_kart.js"></script>
+    <script src="js/shortsproduct.js"></script>
 </body>
 </html>
