--- a/DNK_main.html
+++ b/DNK_main.html
@@ -21,7 +21,7 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+               <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="Tagline_page.html"><strong>EVERYTHING</strong></a>
@@ -65,9 +65,9 @@
                 <div class="col-md-12">
                     <div class="mainHead"><b>Raining Offers For <div>Hot Summer!</div></div>
                     <div class="mainAd">25% Off On All Products</div></b>
-                    <div class="blockIn">
+                  <div class="blockIn">
                         <a href="Tagline_page.html" class="btnShopNow"><b>SHOP NOW</b></a>
-                        <a href="#" class="btnFindMore"><b>FIND MORE</b></a>
+                        <a href="Tagline_page.html" class="btnFindMore"><b>FIND MORE</b></a>
                     </div>
                 </div>
             </div>
@@ -85,10 +85,10 @@
                   <div class="row">
                       <div class="col">
                         <div class="position-relative">
-                          <div class="overlay">
+                    <div class="overlay">
                               <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
-                              <div> "You're unique. Your clothing can be too..."</div>
-                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                           <div> "You're unique. Your clothing can be too..."</div>
+                              <div id="blk"><a href="Tagline_page.html" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
                           </div>
                           <img src="images/women-fashion-free-img.jpg" class="img-fluid d-block w-100" alt="Image 1">
                       </div>
@@ -98,17 +98,17 @@
                           <div class="overlay">
                               <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
                               <div> "You're unique. Your clothing can be too..."</div>
-                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                              <div id="blk"><a href="Tagline_page.html" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
                           </div>
                           <img src="images/men-fashion-free-img.jpg" class="img-fluid d-block w-100" alt="Image 2">
                       </div>
-                      </div>
-                      <div class="col">
+               </div>
+             <div class="col">
                         <div class="position-relative">
                           <div class="overlay">
                               <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
                               <div> "You're unique. Your clothing can be too..."</div>
-                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                              <div id="blk"><a href="Tagline_page.html" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
                           </div>
                           <img src="images/footwear-free-img.jpg" class="img-fluid d-block w-100" alt="Image 3">
                       </div>
@@ -122,7 +122,7 @@
                           <div class="overlay">
                               <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
                               <div> "You're unique. Your clothing can be too..."</div>
-                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                              <div id="blk"><a href="Tagline_page.html" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
                           </div>
                           <img src="images/footwear-free-img.jpg" class="img-fluid d-block w-100" alt="Image 3">
                       </div>
@@ -132,7 +132,7 @@
                           <div class="overlay">
                               <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
                               <div> "You're unique. Your clothing can be too..."</div>
-                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                              <div id="blk"><a href="Tagline_page.html" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
                           </div>
                           <img src="images/men-fashion-free-img.jpg" class="img-fluid d-block w-100" alt="Image 2">
                       </div>
@@ -142,7 +142,7 @@
                           <div class="overlay">
                               <div class="offerLine"><strong>20% Off On Tank Tops</strong></div>
                               <div> "You're unique. Your clothing can be too..."</div>
-                              <div id="blk"><a href="#" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
+                              <div id="blk"><a href="Tagline_page.html" class="btn btn-primary btnShopNow"><b>SHOP NOW</b></a></div>
                           </div>
                           <img src="images/women-fashion-free-img.jpg" class="img-fluid d-block w-100" alt="Image 1">
                       </div>
@@ -259,7 +259,7 @@
   </div>
 
 Buy This T-shirt At 20% Discount, Use Code OFF20
-<div id="blk"><a href="#" class="btnShopNow" ><b>SHOP NOW</b></a></div>
+<div id="blk"><a href="Tagline_page.html" class="btnShopNow" ><b>SHOP NOW</b></a></div>
 </div>
 
 </div>
@@ -294,7 +294,7 @@ Buy This T-shirt At 20% Discount, Use Code OFF20
       <div><b>Secure Payments</b></div>We are offering
       secure payments for items shopped on DNK</div> <hr/>
   </div>
-  <div><a href="#" class="sale section">SALE UP TO 70% OFF FOR ALL CLOTHES & FASHION ITEMS, ON ALL BRANDS.</a></div>
+  <div><a href="Tagline_page.html" class="sale section">SALE UP TO 70% OFF FOR ALL CLOTHES & FASHION ITEMS, ON ALL BRANDS.</a></div>
 </div>
 
 
