--- a/Tagline_page.html
+++ b/Tagline_page.html
@@ -37,7 +37,7 @@
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="DNK_main.html#about">ABOUT</a>
+                            <a class="nav-link" href="DNK_main.html">HOME</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="DNK_main.html#about">CONTACT US</a>
