--- a/shortproduct.html
+++ b/shortproduct.html
@@ -36,7 +36,7 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="DNK_main.html#about">ABOUT</a>
+                    <a class="nav-link" href="DNK_main.html">HOME</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="DNK_main.html#about">CONTACT US</a>
